--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -19,6 +19,7 @@
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.2",
+    "mongoose-fuzzy-searching": "github:Spsden/mongoose-fuzzy-searching",
     "xss-clean": "^0.1.4"
   }
 }
