--- a/FrontEnd/.env
+++ b/FrontEnd/.env
@@ -1,3 +1,3 @@
+REACT_APP_CLIENT_ID = 924918901122-vin1bcfog3275s4qrr3sa3fpctraif3m.apps.googleusercontent.com
+REACT_APP_API_KEY = AIzaSyBphQf-Iu7JXlosmoY9sJR6NjUW8skum4U
 
-Client_id = 834208871160-k1fvufn3o3ftp8c58j6fft2hbe87gtnh.apps.googleusercontent.com
-Client_secret = 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
